8221701: Archive constant BaseLocales
Reviewed-by: naoto